# nu_plugin_ebpf

./: CHANGELOG.md  Cargo.toml  README.md  REFACTOR_PLAN.md  RESEARCH.md  TODO.md
docs/: development.md  examples.md  external-alpha.md  reference.md
scripts/: manual_integration.nu  manual_integration.sh  verifier_diff.nu  verifier_diff_validate.nu
scripts/verifier_diff/: fixtures.nu
scripts/verifier_diff/fixtures/: fixtures_0001_0031.nu  fixtures_0001_0062.nu  fixtures_0001_0125.nu  fixtures_0001_0250.nu  fixtures_0001_0500.nu  fixtures_0032_0062.nu  fixtures_0063_0093.nu  fixtures_0063_0125.nu  fixtures_0094_0125.nu  fixtures_0126_0156.nu  fixtures_0126_0187.nu  fixtures_0126_0250.nu  fixtures_0157_0187.nu  (+557 more)
src/: lib.rs  loader.rs  main.rs  program_spec.rs
src/commands/: attach.rs  bytes.rs  bytes_predicates.rs  counters.rs  detach.rs  helpers.rs  histogram.rs  list.rs  mod.rs  program_intrinsics.rs  setup.rs  spec.rs  spec_output.rs  stacks.rs  trace.rs
src/compiler/: btf.rs  cfg.rs  context_schema.rs  ctx_field_schema.rs  elf.rs  graph_coloring.rs  hindley_milner.rs  hir.rs  hir_to_mir.rs  hir_type_infer.rs  instruction.rs  ir_to_mir.rs  lir.rs  lir_integrity.rs  mir.rs  mir_integrity.rs  mir_to_ebpf.rs  mir_to_lir.rs  mod.rs  packet_layout.rs  reg_info.rs  subfn_summaries.rs  test_mir_builders.rs  type_hints.rs  type_infer.rs  vcc.rs  verifier_diff_test_support.rs  verifier_types.rs
src/kernel_btf/: mod.rs  service.rs  tracepoint.rs  types.rs
src/loader/: attach.rs  events.rs  libbpf.rs  maps.rs  targets.rs  tests.rs
tests/: integration.rs
(+335 files in other folders)
